# dermalert-backend

./: .env.example  404.html  Dockerfile-dev  Dockerfile-prod  Makefile  check_db.py  docker-compose.dev.yml  docker-compose.yml  index.html  init-db.sh  manage.py  mkdocs.yml  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: docker-publish.yml
accounts/: permissions.py  services.py  urls.py  validators.py
accounts/enums/: gender.py  permission_role.py
accounts/filters/: user.py
accounts/managers/: user.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_user_managers_patient_other_gender_and_more.py  0003_professional_workflows.py  0004_alter_user_cpf.py  0005_alter_patient_sus_number_alter_user_cpf.py
accounts/models/: __init__.py  invite_work.py  patient.py  session.py  user.py  work.py
accounts/serializers/: auth.py  patient.py  user.py  work.py
accounts/tests/: auth_tests.py  factories.py  patient_tests.py  professional_assignment_tests.py  role_access_tests.py  swagger_ui_tests.py  (+2 more)
address/: models.py  serializer.py  services.py  urls.py  views.py
consent_form/: admin.py  apps.py  models.py  serializers.py  views.py
core/: minio_utils.py  models.py  seed_config.py
dermalert/: asgi.py  settings.py  urls.py  wsgi.py
docs/: index.md
health_unit/: apps.py  serializer.py  views.py
profile_forms/: admin.py  apps.py  urls.py  views.py
search/: search_index.json
skin_conditions/: admin.py  apps.py  enums.py  serializers.py  tests.py  views.py
skin_forms/: admin.py  apps.py  serializers.py  tests.py  views.py
(+148 files in other folders)
