[project]
name = "dermalert-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "drf-nested-routers>=0.94.2",
    "drf-yasg>=1.21.10",
    "pillow>=11.2.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "ruff>=0.11.4",
]
prod = [
    "gunicorn>=23.0.0",
]
test = [
    "factory-boy>=3.3.3",
    "faker>=37.3.0",
    "pytest>=8.0,<8.4",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.7.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.7.0",
]
